--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,7 @@ jobs:
         env:
           APPID: ${{ secrets.APPID }}
           APPKEY: ${{ secrets.APPKEY }}
-          GA: ${{ secrets.GA }}
-        run: npm install && npm run docs:build
+        run: yarn && yarn build
 
       # 部署到 GitHub Pages
       - name: Deploy
